src/main/resources/addons/monitoring-1.23.1/dcgm-exporter.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: dcgm-exporter
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: dcgm-exporter
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dcgm-exporter
      name: dcgm-exporter
    spec:
      hostNetwork: true
      hostPID: true
      nodeSelector:
        hardware-type: NVIDIAGPU
      containers:
      - image: "nvcr.io/nvidia/k8s/dcgm-exporter:2.3.2-2.6.3-ubuntu20.04"
        name: nvidia-dcgm-exporter
        command: ["/usr/bin/dcgm-exporter", "-f", "/etc/dcgm-exporter/dcp-metrics-included.csv"]
        securityContext:
          runAsNonRoot: false
          runAsUser: 0
          capabilities:
            add: ["SYS_ADMIN"]
        volumeMounts:
        - name: "pod-gpu-resources"
          readOnly: true
          mountPath: "/var/lib/kubelet/pod-resources"
        - name: "dcgm-config"
          readOnly: true
          mountPath: "/etc/dcgm-config"
      volumes:
      - name: "pod-gpu-resources"
        hostPath:
          path: "/var/lib/kubelet/pod-resources"
      - name: "dcgm-config"
        hostPath:
          path: "/root/gpu-driver"
      tolerations:
        - effect: NoSchedule
          operator: Exists
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: 'true'
  labels:
    app: dcgm-exporter
    name: dcgm-exporter
  name: dcgm-exporter
  namespace: monitoring
spec:
  ports:
  - name: scrape
    port: 9400
    protocol: TCP
  selector:
    app: dcgm-exporter
  type: ClusterIP
