src/main/resources/addons/monitoring-1.23.1/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      name: grafana
      labels:
        app: grafana
    spec:
      volumes:
      - name: grafana-config-volume
        configMap:
          name: grafana-config
          items:
          - key: grafana.ini
            path: grafana.ini
          - key: datasource.yml
            path: provisioning/datasources/datasource.yml
          - key: dashboards.yml
            path: provisioning/dashboards/dashboards.yml
          - key: dashboard.json
            path: dashboard/dashboard.json
          - key: gpu-dashboard.json
            path: dashboard/gpu-dashboard.json
      containers:
      - name: grafana
        image: grafana/grafana:8.4.3
        ports:
        - name: grafana
          containerPort: 3000
        volumeMounts:
          - name: grafana-config-volume
            mountPath: /etc/grafana/
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '3000'
spec:
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
