src/main/resources/addons/monitoring-1.23.1/prometheus-node-exporter.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-exporter
  namespace: monitoring
  labels:
    k8s-app: node-exporter
spec:
  selector:
    matchLabels:
      k8s-app: node-exporter
  template:
    metadata:
      labels:
        k8s-app: node-exporter
    spec:
      tolerations:
      - key: node-role.kubernetes.io/master
        operator: Exists
        effect: NoSchedule
      - key: node-role.kubernetes.io/control-plane
        operator: Exists
        effect: NoSchedule
      containers:
      - image: prom/node-exporter
        name: node-exporter
        ports:
        - containerPort: 9100
          protocol: TCP
          name: http
        args:
          - --path.rootfs=/host/root
          - --path.procfs=/host/proc
          - --path.sysfs=/host/sys
        volumeMounts:
          - mountPath: /host/root
            mountPropagation: HostToContainer
            name: root
            readOnly: true
          - mountPath: /host/proc
            mountPropagation: HostToContainer
            name: proc
            readOnly: true
          - mountPath: /host/sys
            mountPropagation: HostToContainer
            name: sys
            readOnly: true
      volumes:
        - name: root
          hostPath:
            path: /
        - name: proc
          hostPath:
            path: /proc
        - name: sys
          hostPath:
            path: /sys
      hostNetwork: true
      hostPID: true
      hostIPC: true
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: node-exporter
  name: node-exporter
  namespace: monitoring
spec:
  ports:
  - name: http
    port: 9100
    protocol: TCP
  selector:
    k8s-app: node-exporter
