src/main/resources/addons/monitoring-1.23.1/grafana-ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata: 
  name: "grafana-ingress"
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec: 
  rules: 
    - 
      http: 
        paths: 
          - 
            path: "/grafana(/|$)(.*)"
            pathType: "Prefix"
            backend: 
              service: 
                name: "grafana"
                port: 
                  number: 3000
