src/main/resources/addons/monitoring-1.23.1/prometheus-ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata: 
  name: "prometheus-ingress"
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec: 
  rules: 
    - 
      http: 
        paths: 
          - 
            path: "/prometheus(/|$)(.*)"
            pathType: "Prefix"
            backend: 
              service: 
                name: "prometheus-service"
                port: 
                  number: 9090
